--- a/public/homepage/home/index.html
+++ b/public/homepage/home/index.html
@@ -116,19 +116,9 @@
 
 
 
-  <link type="text/css"
-        rel="stylesheet"
-        href="/Home/css/print.css"
-        media="print">
-
-  <link type="text/css"
-        rel="stylesheet"
-        href="/Home/css/poole.css">
-
-  <link type="text/css"
-        rel="stylesheet"
-        href="/Home/css/hyde.css">
-
+  <link type="text/css" rel="stylesheet" href="/Home/css/print.css" media="print">
+  <link type="text/css" rel="stylesheet" href="/Home/css/poole.css">
+  <link type="text/css" rel="stylesheet" href="/Home/css/hyde.css">
   
 <style type="text/css">
   .sidebar {
@@ -168,20 +158,10 @@
 
   <link type="text/css" rel="stylesheet" href="/Home/css/blog.css">
 
-  <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700&display=swap">
-
-  <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
-        integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk="
-        crossorigin="anonymous" />
-
-  <link rel="apple-touch-icon-precomposed"
-        sizes="144x144"
-        href="/apple-touch-icon-144-precomposed.png">
-
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700&display=swap">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/apple-touch-icon-144-precomposed.png">
   <link rel="icon" type="image/png" href="/favicon.png">
-  
 
   
   </head>
@@ -305,16 +285,13 @@
 </footer>
 
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/js/all.min.js"
-          integrity="sha256-MAgcygDRahs+F/Nk5Vz387whB4kSK9NXlDN3w58LLq0="
-          crossorigin="anonymous"></script>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/js/all.min.js" integrity="sha256-MAgcygDRahs+F/Nk5Vz387whB4kSK9NXlDN3w58LLq0=" crossorigin="anonymous"></script>
 
   <script src="/Home/js/jquery.min.js"></script>
   <script src="/Home/js/soho.js"></script>
 
   <script src="/Home/js/blog.js"></script>
 
-    
+  
 </body>
 </html>
