gorg css updates

--- a/public/index.html
+++ b/public/index.html
@@ -185,7 +185,7 @@
 </aside>
 
 
-  <main class="content container">
+  <main class="content container main-content">
   <div class="homepage">
     
       <div class="home-content">
