code block styling

--- a/public/homepage/home/index.html
+++ b/public/homepage/home/index.html
@@ -164,8 +164,7 @@
 
 
 
-  
-  <link type="text/css" rel="stylesheet" href="/Home/css/blog.css">
+  <link type="text/css" rel="stylesheet" href="/Home/css/syntax.css">
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700&display=swap">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
@@ -300,6 +299,22 @@
   <script src="/Home/js/soho.js"></script>
 
   <script src="/Home/js/blog.js"></script>
+
+  <script type="text/javascript" async
+    src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/3.2.0/es5/tex-mml-chtml.js">
+  </script>
+  <script type="text/x-mathjax-config">
+    MathJax = {
+      tex: {
+        inlineMath: [['$', '$'], ['\\(', '\\)']],
+        displayMath: [['$$', '$$'], ['\\[', '\\]']]
+      },
+      options: {
+        ignoreHtmlClass: ".*|",
+        processHtmlClass: "arithmatex"
+      }
+    };
+  </script>
 
   
 </body>
