--- a/public/homepage/home/index.html
+++ b/public/homepage/home/index.html
@@ -232,7 +232,7 @@
 <p>Hi, I’m Amy! I am a data scientist who is a big fan of predictive modeling and data viz. I currently work mainly in python to build podium probabilities and other interesting predictions for Canadian Olympic teams! I&rsquo;m also learning a lot about Bayesian stats by taking Richard McElreath&rsquo;s course &ldquo;Statistical Rethinking&rdquo; and exploring some deep learning with Andrew Ng&rsquo;s online courses.</p>
 <p>Apart from my professional pursuits, I am also a competitive cyclist, avid hiker, professional cat petter, and scifi/fantasy novel reader!</p>
 <p>I hope to upload some projects and fun stuff soon!</p>
-<p><img src="/Home/images/bikepic.jpg" alt="Cycling Photo"></p>
+<p><img src="/images/bikepic.jpg" alt="Cycling Photo"></p>
 
   </div>
 
