--- a/public/homepage/home/index.html
+++ b/public/homepage/home/index.html
@@ -233,6 +233,7 @@
 <p>Check out my <a href="https://www.amybell.info/posts/">posts page</a> to see what I&rsquo;ve been working on!</p>
 <p>Apart from my professional pursuits, I am also a competitive cyclist, avid hiker, professional cat petter, and scifi/fantasy novel reader!</p>
 <p><img src="/images/bikepic.jpg" alt="Cycling Photo"></p>
+<!-- raw HTML omitted -->
 
   </div>
 
