--- a/public/homepage/index.html
+++ b/public/homepage/index.html
@@ -128,6 +128,7 @@
 
   
   <link type="text/css" rel="stylesheet" href="/css/syntax.css">
+  <link rel="stylesheet" href="/css/custom.css">
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700&display=swap">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
