about page and home page updates

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -14,19 +14,19 @@
 
   
   <meta itemprop="name" content="Amy Bell">
-  <meta itemprop="description" content="Hi, I’m Amy! I’m a data scientist who is a big fan of predictive modeling and data viz.">
-  <meta itemprop="wordCount" content="219">
+  <meta itemprop="description" content="More About Me Thanks for taking a look at this page!">
+  <meta itemprop="wordCount" content="168">
 
 
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Amy Bell">
-  <meta name="twitter:description" content="Hi, I’m Amy! I’m a data scientist who is a big fan of predictive modeling and data viz.">
+  <meta name="twitter:description" content="More About Me Thanks for taking a look at this page!">
 
 
 <meta property="og:url" content="http://localhost:1313/about/">
   <meta property="og:site_name" content="Amy Bell">
   <meta property="og:title" content="Amy Bell">
-  <meta property="og:description" content="Hi, I’m Amy! I’m a data scientist who is a big fan of predictive modeling and data viz.">
+  <meta property="og:description" content="More About Me Thanks for taking a look at this page!">
   <meta property="og:locale" content="en">
   <meta property="og:type" content="article">
 
@@ -70,7 +70,7 @@
       "about": {
          "@id": "http://localhost:1313/#author"
       },
-      "description": "Hi, I\u0026rsquo;m Amy! I\u0026rsquo;m a data scientist who is a big fan of predictive modeling and data viz.",
+      "description": "More About Me Thanks for taking a look at this page!",
       "inLanguage": "en",
       "potentialAction": [
         {
@@ -227,9 +227,8 @@
   
 
   <div>
-  <h1 id="hi-im-amy">Hi, I&rsquo;m Amy!</h1>
-<p>I&rsquo;m a data scientist who is a big fan of predictive modeling and data viz. I currently work mainly in Python to build podium probabilities and other interesting predictions for Canadian Olympic teams! I&rsquo;m also learning a lot about Bayesian stats by taking Richard McElreath&rsquo;s course &ldquo;Statistical Rethinking&rdquo; in R and exploring some deep learning with Andrew Ng&rsquo;s Coursera courses.</p>
-<p>Check out my <a href="https://www.amybell.info/posts/">posts page</a> to see what I&rsquo;ve been working on!</p>
+  <h1 id="more-about-me">More About Me</h1>
+<p>Thanks for taking a look at this page! Below are some of my favourtie things and some of my favourite books</p>
 <hr class="green">
 
 
