--- a/public/index.html
+++ b/public/index.html
@@ -197,9 +197,11 @@
       
         <h1 id="hi-im-amy">Hi, I&rsquo;m Amy!</h1>
 <p>I&rsquo;m a data scientist who is a big fan of predictive modeling and data viz. I currently work mainly in Python to build podium probabilities and other interesting predictions for Canadian Olympic teams! I&rsquo;m also learning a lot about Bayesian stats by taking Richard McElreath&rsquo;s course &ldquo;Statistical Rethinking&rdquo; in R and exploring some deep learning with Andrew Ng&rsquo;s Coursera courses.</p>
+<p><a href="files/amy_resume.pdf">Click anywhere around here to view my full resume!</a></p>
 <hr class="green">
 
 <h1 id="read-about-my-projects">Read About my Projects</h1>
+<p>You can find the repos for these projects <a href="https://github.com/amygbe">on my github</a>
 <section class="projects">
   
   <div class="project-card">
@@ -233,21 +235,49 @@
   </div>
   
 </section>
+</p>
+<hr class="green">
+
+
+
+<div class="gdoc-columns gdoc-columns--large flex flex-gap flex-mobile-column">
+    <div class="gdoc-columns__content gdoc-markdown--nested flex-even">
+      <h3 id="work-highlights">Work Highlights</h3>
+<p>These are a few of my favourite topics I&rsquo;ve worked on:</p>
+<ul>
+<li>monte carlo simulations</li>
+<li>Olympics podium pathways</li>
+<li>webscraping</li>
+<li>gradient boosted trees</li>
+</ul></div>
+    <div class="gdoc-columns__content gdoc-markdown--nested flex-even">
+      <h3 id="current-studies-and-interests">Current studies and interests</h3>
+<ul>
+<li>Statistical rethinking, Richard McElreath</li>
+<li>Deep learning specialization course, Andrew Ng</li>
+<li>Predictive modelling</li>
+<li>Bayesian stats</li>
+<li>data visualization</li>
+</ul>
+</div>
+</div>
 
 <hr class="green">
 
 <div class="about-card">
     <h3><a href="/about/">See more about me</a></h3>
     <div class="about-card-content">
-      <div class="about-card-image">
-        <img src="/images/bikepic.jpg" alt="See more about me">
-      </div>
-      <div class="about-card-text">
-        <p> Take a look at my biking, hiking, and my favourite books. </p>
-      </div>
+        <div class="about-card-image">
+            <a href="/about/">
+                <img src="/images/bikepic.jpg" alt="See more about me">
+            </a>
+        </div>
+        <div class="about-card-text">
+            <p> Take a look at my biking, hiking, favourite books and video games. </p>
+        </div>
     </div>
-  </div>
-  
+</div>
+
 
       
     </div>
