--- a/public/404.html
+++ b/public/404.html
@@ -168,6 +168,8 @@
           <a href="/posts/">Posts</a>
         </li><li>
           <a href="/about/">About</a>
+        </li><li>
+          <a href="/contact/">Contact Me</a>
         </li>
       </ul>
     </nav>
