--- a/public/index.html
+++ b/public/index.html
@@ -199,7 +199,10 @@
       
         <h1 id="hi-im-amy">Hi, I&rsquo;m Amy!</h1>
 <p>I&rsquo;m a data scientist who is a big fan of predictive modeling and data viz. I currently work mainly in Python to build podium probabilities and other interesting predictions for Canadian Olympic teams! I&rsquo;m also learning a lot about Bayesian stats by taking Richard McElreath&rsquo;s course &ldquo;Statistical Rethinking&rdquo; in R and exploring some deep learning with Andrew Ng&rsquo;s Coursera courses.</p>
-<p><a href="files/amy_resume.pdf">Click anywhere around here to view my full resume!</a></p>
+<a href="/files/amy_resume.pdf" class="rounded-button">
+    Download My Resume
+</a>
+
 <hr class="green">
 
 <h1 id="read-about-my-projects">Read About my Projects</h1>
